tests/errors/kind_invalid_int_of_int.f90
program kind_invalid_int_of_int
    implicit none
    integer(3) :: x
end program
